--- a/data-explorer/src/styles/menu.css
+++ b/data-explorer/src/styles/menu.css
@@ -8,10 +8,11 @@
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto auto;
     grid-template-areas: 
-    	"ids"
+    	"attributes"
     	"attributes";
-    justify-content: center;
-    align-items: center;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+
 }
 
 .ids {
@@ -41,7 +42,7 @@
 
 
 .attributes {
-
+	/*border: 1px solid black;*/
 	grid-area: attributes;
 	display: grid !important;
 	grid-template-columns: repeat(1, 1fr) !important;
@@ -55,46 +56,56 @@
 	justify-self:center;
 }
 .attributes-container {
+	/*border: 1px solid black;*/
 	overflow-y: scroll;
-	height: 30vh;
+	height: 60vh;
 	grid-area: attributes-container;
 	display: grid;
 	grid-auto-rows: auto;
 	grid-template-columns: repeat(1,1fr);
 }
 .attribute {
+	/*border: 1px solid black;*/
 	display: grid;
-	grid-template-columns: 3fr 2fr 1fr !important;
+	grid-template-columns: 2fr 2fr 1fr;
 	grid-template-rows: auto;
-	/*align-self: flex-start !important;*/
-	align-items: flex-end;
+	align-items: center;
+	/*justify-content: center;*/
 	border-bottom: 1px solid black;
-	padding-bottom: 0.5em;
+	padding-bottom: 0.1em;
 }
 .attribute-name {
-	text-align: left;
+	/*border: 1px solid black;*/
+	/*text-align: left;*/
 	font-size: 0.5em;
-	align-self: auto;
-	justify-self: flex-start;
+	/*align-self: auto;*/
+	/*justify-self: flex-start;*/
+	height: 2.5em;
+	min-width: 100%;
+	overflow-y: scroll;
+	align-self: center;
 
 }
 .attribute-select {
+	/*border: 1px solid black;*/
 	margin-right: 0.5em;
 	align-self: center;
 	justify-content: center;
-	width: 100%;
+	min-width: 100%;
 
 }
 .attribute-select-item {
+	/*border: 1px solid black;*/
 	width: 100%;
 	justify-self: center !important;
 	align-self: center !important;
 }
 
 .attribute-switch {
+	/*border: 1px solid black;*/
 	width: 100%;
-	padding-left: 0.5em;
-	justify-self: flex-end;
+	padding-left: 0.1em;
+	/*justify-content: center !important;*/
 }
 .divider {
 	width: 100%;
